# autokernel-halo-strix

./: .gitignore  .impeccable.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONSTRAINTS.md  INSTALL_AITER.md  INSTALL_CAUSAL_CONV1D.md  INSTALL_MAMBA_SSM.md  KNOWLEDGE_GRAPH.md  MatFormer.md  PLE.md  README.md  REPORT.md  SESSION_SUMMARY_2026-05-05.md  STATUS.md  bench.py  debug_rope.py  extract.py  kernel.py  prepare.py  profile.py  profiler.py  program.md  pyproject.toml  reference.py  verify.py  yt_transcript.txt  yt_transcript_timestamps.txt
autokernel/: __init__.py  _patterns.py  _registry.py  triton_autotune.py  triton_base.py
docs/: 2026-04-10-caveman-gemma-hackathon-conversation-overview.md  blog-post.md  machine_0_log.txt  machine_1_log.txt  novelties.md  possible_techniques_bwd_improv.md  reliable_small_language_model_training_guide.md
evals/: sample_pack_v1.txt
experiments/: mi300_optimization.md  mi300_porting.md  readme.md
halo_training/: README.md  __init__.py  __main__.py  activation_monitor.py  activation_quant.py  alignment.py  alignment_trainer.py  callbacks.py  chat_template.py  cli.py  clion.py  data.py  dpo.py  evaluate.py  leap_layer_exit.py  lion.py  lowrank_backward.py  memory.py  metrics.py  mixture_data.py  model_utils.py  mtp_loss.py  muon.py  mup.py  normuon.py  optimizer.py  sampled_softmax.py  sft_data.py  sft_loss.py  smoke.py  spectra.py  stability.py  stream_overlap.py  streaming.py  trainer.py
kernelbench/: bench_kb.py  program_kb.md
kernels/: ce_fused.py  fused_mlp.py  matmul.py  softmax.py
knowledge/: INDEX.md  ddp_setup_guide.md  (+14 more)
(+701 files in other folders)
