[project]
name = "autokernel"
version = "2.2.0"
description = "Autonomous AI agents optimizing GPU kernels overnight -- for any PyTorch model (AMD Strix Halo / HIP C++)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.0",
    "numpy>=2.2.0",
    "pandas>=2.2.0",
    "torch>=2.4.0",
]

[project.optional-dependencies]
# Model ingestion: profile and optimize any PyTorch model
models = [
    "transformers>=4.50.0",
    "accelerate>=1.5.0",
    "safetensors>=0.5.0",
]
# Training: halo_training package dependencies
training = [
    "tiktoken>=0.7.0",
    "pyarrow>=15.0.0",
]
# HIP C++ backend: faster kernel compilation with ninja
hip = [
    "ninja>=1.11.0",
]
# KernelBench integration: benchmark against 250+ standardized GPU kernel problems
kernelbench = [
    "datasets>=2.16.0",
]
# Advanced profiling: HTA, memory analysis
profiling = [
    "HolisticTraceAnalysis>=0.2.0",
]
# HuggingFace Kernels: export and distribute optimized kernels via the Hub
hf-kernels = [
    "kernels>=0.4.0",
    "huggingface-hub>=0.20.0",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-rocm712" },
]

[[tool.uv.index]]
name = "pytorch-rocm712"
url = "https://download.pytorch.org/whl/rocm7.12"
explicit = true
